[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosenv"
version = "1.0.0"
description = "ChaosEnv SRE Simulator"
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"